--- a/index.html
+++ b/index.html
@@ -23,7 +23,7 @@
 	
 	<div id="header">
 		<!-- The name of your website -->
-		<h1><a href="index.html"><strong>Elementz</strong>Theme</a></h1>
+		<h1><a href="index.html"><strong>Херсонский областной</strong> центр по гидрометеорологии</a></h1>
 		<!-- Tagline -->
 		<p class="tagline">Professional Theme for Your Needs</p>
 		<ul>
