--- a/index.html
+++ b/index.html
@@ -25,7 +25,7 @@
 		<!-- The name of your website -->
 		<h1><a href="index.html"><strong>Херсонский областной</strong> центр по гидрометеорологии</a></h1>
 		<!-- Tagline -->
-		<p class="tagline">Professional Theme for Your Needs</p>
+		<p class="tagline"></p>
 		<ul>
 			<!-- Navigation - the current page is highlighted with css class "current". -->
 			<li class="current"><a href="index.html">Home <span class="navi-description">Back to Home</span></a></li>
