--- a/contact.html
+++ b/contact.html
@@ -46,7 +46,7 @@
 
 			<h2>Contact Form</h2>
 			<p>Just fill out the required fields and send your message. We'll get back to you as soon as possible.</p>
-
+<iframe src="https://www.facebook.com/plugins/post.php?href=https%3A%2F%2Fwww.facebook.com%2Fn1ckbulgakov%2Ftimeline%2Fstory%3Fut%3D32%26wstart%3D-2051193600%26wend%3D2147483647%26hash%3D109850882954378%26pagefilter%3D3%26ustart%3D1&width=500" width="500" height="249" style="border:none;overflow:hidden" scrolling="no" frameborder="0" allowTransparency="true"></iframe>
 			<form action="sendmail.php" id="contact" method="post" >            
 				<fieldset>
 					<label>Name <em>required</em></label>
