--- a/index.html
+++ b/index.html
@@ -99,7 +99,7 @@ http://www.templatemo.com/tm-501-neaty
 						<!--	<img src="img/weather.png" alt="Image" class="img-fluid">     -->   
 					                                <div class="tm-gallery-container tm-gallery-3">
                                     <div class="tm-img-container tm-img-container-3">
-                                        <a href="weather/weather.png"><img src="weather/weather.png" alt="Image" class="img-fluid tm-img-tn"></a>    
+                                        <a href="weather/weather.png"><img src="weather/weather.png"  width=600 height=600> alt="Image" class="img-fluid tm-img-tn"></a>    
                                     </div>	
 				
 				    
