--- a/index.html
+++ b/index.html
@@ -166,7 +166,7 @@ http://www.templatemo.com/tm-501-neaty
                                 
                             </section>
                             <footer>
-                                <p class="tm-copyright-p">Херсонський ЦГМ  <span class="tm-current-year">2017</span> 
+                                <p class="tm-copyright-p">© Херсонський ЦГМ - <span class="tm-current-year">2018</span> 
                                 
                              <!--     <a href="http://www.///.com" target="_parent">ссылка</a></p>-->
                             </footer>
