--- a/index.html
+++ b/index.html
@@ -153,7 +153,7 @@
 											
                                         </p>
                                         <address>
-										Email: 
+										Email: pgdkherson@meteo.gov.ua
                                         </address>
 												    <p>
                                         Facebook: <a href="https://www.facebook.com/meteokherson/ " target="_parent">https://www.facebook.com/meteokherson/</a></p>
