--- a/index.html
+++ b/index.html
@@ -149,7 +149,7 @@
 											
                                         </p>
 										    <p>
-                                        Телефон: (0552) 22-61-43
+                                        Телефон: (0552) 22-61-43, 22-33-15
 											
                                         </p>
                                         <address>
