--- a/index.html
+++ b/index.html
@@ -59,7 +59,7 @@
                     <!-- Right column: content -->
                     <div class="tm-right-column">
                         <figure>
-                            <img src="img/neaty-01.jpg" alt="Header image" class="img-fluid">    
+                            <img src="img/front.jpg" alt="Header image" class="img-fluid">    
                         </figure>
 
                         <div class="tm-content-div">
