--- a/index.html
+++ b/index.html
@@ -29,7 +29,7 @@
                     <div class="tm-blue-bg tm-left-column">                        
                         <div class="tm-logo-div text-xs-center">
                             <img src="img/tm-neaty-logo.png" alt="Logo">
-                            <h1 class="tm-site">Херсонський обласний центр з гідрометеорології</h1>
+                            <h1 style="font-size:170%;">Херсонський обласний центр з гідрометеорології</h1>
 		
                         </div>
                         <nav class="tm-main-nav">
