--- a/index.html
+++ b/index.html
@@ -28,7 +28,7 @@
                     <!-- Left column: logo and menu -->
                     <div class="tm-blue-bg tm-left-column">                        
                         <div class="tm-logo-div text-xs-center">
-                            <img src="img/tm-neaty-logo.png" alt="Logo">
+                          <!--   <img src="img/tm-neaty-logo.png" alt="Logo">-->
                             <h1 style="font-size:170%;">Херсонський обласний центр з гідрометеорології</h1>
 		
                         </div>
