--- a/index.html
+++ b/index.html
@@ -1,4 +1,4 @@
-<!DOCTYPE html>
+﻿<!DOCTYPE html>
 <html>
 <head>
     <meta charset="utf-8">
@@ -48,10 +48,10 @@
                                 <li class="tm-nav-item">
                                     <a href="#weather" class="tm-nav-item-link">Погода</a>
                                 </li>
-                                      <li class="tm-nav-item">
+                                <!--               <li class="tm-nav-item">
                                     <a href="#history" class="tm-nav-item-link">Історія</a>
                                
-                     <!--            <li class="tm-nav-item">
+                        <li class="tm-nav-item">
                                     <a href="#gallery" class="tm-nav-item-link">Галерея</a>
                                 </li> 
 								 -->
